# phds

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANAGEMENT.md  NOTES.md  README.md  manifest.yml  package-lock.json  package.json  pom.xml  tsconfig.json
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gae-deploy.yml  promote.yml
client/: manifest.yml  package-lock.json  package.json  tsconfig.json
client/src/: index.js
docs/: architecture.md  model.graffle  overview.md  storage.md  workflow.puml
docs/blueprints/: architecture.md  feedback.md  index.graffle  model.graffle  storage.md
docs/development/: forge.md  resources.md  tasks.md
docs/manual/: index.md
markdown/gemini-ab/: @.js  (+2 more)
python-prototype/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python-prototype/scripts/: convert_pdf_to_md_with_gemini.py  detect_inconsistencies.py  evaluate_pdf_to_md_conversion.py  evaluate_translation.py  translate_with_gemini.py
python-prototype/src/config/: paths.py
python-prototype/src/inconsistency/core/: inconsistency_detection_service.py
python-prototype/src/llm/ports/: gemini_port.py  llm_port.py
python-prototype/src/pdf_to_md/core/: pdf_to_md_service.py
python-prototype/src/pdf_to_md/evaluation/: pdf_to_md_evaluation_service.py
python-prototype/src/prompt/ports/: langfuse_port.py  prompt_port.py
python-prototype/src/translation/core/: translation_service.py
python-prototype/src/translation/evaluation/: pdf_to_md_evaluation_service.py
(+141 files in other folders)
