[project]
name = "unipv-ec2u"
version = "0.1.0"
description = "GenAI tools to speed up PhD agreement redaction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.29.0",
    "langfuse>=3.2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"
